selectic/www: fix item title overlap
When an item was selected and its title is quite long,
the title overlap the icon displayed next to it and it was kind
of messy.

--- a/src/css/selectic.css
+++ b/src/css/selectic.css
@@ -204,6 +204,13 @@
     white-space: nowrap;
     cursor: pointer;
 }
+
+.selectic-item_text {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .selectic-item:not(.selected) .selectic-item_icon {
     opacity: 0;
 }
